# padawan_vulnerabilities

./: README.md
1. (Linear) Stack Buffer Overflow/: context.txt  writeup.txt
1. (Linear) Stack Buffer Overflow/src/: linearstackbufferoverflow.c
1. (Linear) Stack Buffer Overflow/walkthrough/: main.cpp
1. (Linear) Stack Buffer Overflow/writeup/: writeup.md
10. Information Disclosure/: context.txt  writeup.txt
10. Information Disclosure/src/: infodisclosure.c
10. Information Disclosure/writeup/: writeup.md
2. (Linear) Heap Buffer Overflow/: writeup.txt
2. (Linear) Heap Buffer Overflow/src/: simple_heapoverflow.c
2. (Linear) Heap Buffer Overflow/writeup/: Heap_Buffer_Overflow_Writeup.md
3. (Non-Linear) Out-Of-Bounds Writes (OOB-W)/src/: simple_oobw.c
3. (Non-Linear) Out-Of-Bounds Writes (OOB-W)/writeup/: Out_Of-Bounds_Writes_Writeup.md
4. Integer Overflow & Underflow/: context.txt  writeup.txt
4. Integer Overflow & Underflow/src/: integeroverflow.c
4. Integer Overflow & Underflow/writeup/: writeup.md
5. Other Integer Issues/: context.txt  writeup.txt
5. Other Integer Issues/src/: otherintegerissue.c
5. Other Integer Issues/writeup/: writeup.md
6. Uninitialized Data Access/src/: simple_uda.c
6. Uninitialized Data Access/writeup/: Uninitialized_Data_Access_Writeup.md
7. Race Condition/: context.txt  writeup.txt
7. Race Condition/src/: race_cond.c  racecondition.c
8. Use-After-Free/: writeup.txt
9. Type Confusion/: writeup.txt
Challenge1/: Instructions.md  client.cpp  compile.bat  padawan.cpp  padawan.h  server.cpp
Challenge1/jz/: CMakeLists.txt  File_Structure.txt  For Understanding.pptx
Challenge1/jz/client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  base_client.cpp  base_client.h  main.cpp
Challenge1/jz/padawan_dll/: CMakeLists.txt  padawan.cpp  padawan.h
Challenge1/jz/server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  MessageQueue.cpp  MessageQueue.h  base_listening_server.cpp  base_listening_server.h  main.cpp
(+7 files in other folders)
